--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
-  "name": "react-create-cli",
-  "version": "1.0.0",
-  "description": "",
-  "bin": "bin/enter.mjs",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lsshym/react-create-cli.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/lsshym/react-create-cli/issues"
-  },
-  "homepage": "https://github.com/lsshym/react-create-cli#readme",
-  "dependencies": {
-    "ejs": "^3.1.8",
-    "inquirer": "^9.1.0"
-  }
+    "name": "react-create-cli",
+    "version": "1.0.0",
+    "description": "react项目创建脚手架",
+    "bin": {
+        "rcc": "bin/index.mjs"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "dependencies": {
+        "axios": "^0.27.2",
+        "chalk": "^5.0.1",
+        "commander": "^9.4.0",
+        "figlet": "^1.5.2",
+        "fs-extra": "^10.1.0",
+        "inquirer": "^9.1.0",
+        "ora": "^6.1.2"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/lsshym/react-create-cli.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/lsshym/react-create-cli/issues"
+    },
+    "homepage": "https://github.com/lsshym/react-create-cli#readme"
 }
