--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "axios": "^0.27.2",
         "chalk": "^5.0.1",
         "commander": "^9.4.0",
+        "cross-spawn": "^7.0.3",
         "figlet": "^1.5.2",
         "fs-extra": "^10.1.0",
         "inquirer": "^9.1.0",
