--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "chalk": "^5.0.1",
         "commander": "^9.4.0",
         "cross-spawn": "^7.0.3",
+        "download-git-repo": "^3.0.2",
         "figlet": "^1.5.2",
         "fs-extra": "^10.1.0",
         "inquirer": "^9.1.0",
-        "ora": "^6.1.2"
+        "ora": "^6.1.2",
+        "util": "^0.12.4"
     },
     "repository": {
         "type": "git",
